Archive2/f9/aa41bfd2e7a985/output
main.cpp:8:1: error: static assertion failed: Oops
 static_assert( std::is_pod<metadata>::value, "Oops");
 ^
